re PR c/63480 (-Wmissing-field-initializers should not warn about intentionally empty initializers (or that should be a separate option))

PR c/63480
	* c-typeck.c (pop_init_level): Don't warn about initializing
	with { }.

	* gcc.dg/pr63480.c: New test.

From-SVN: r216031